# AdaptiveHybrid-RAG-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  advanced_hybrid_rag_copilot_prompt.md  pyproject.toml  streamlit_app.py  tmp_rag_quality_audit.py  tmp_retrieval_diag.py
advanced-hybrid-rag/: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
advanced-hybrid-rag/backend/: Dockerfile  main.py  requirements.txt
advanced-hybrid-rag/backend/adaptive/: __init__.py  adaptive_controller.py  corrective_rag.py  feedback_learner.py  quality_scorer.py  query_reformulator.py
advanced-hybrid-rag/backend/analysis/: citation_analysis.py
advanced-hybrid-rag/backend/api/: auth.py  middleware.py  websocket.py
advanced-hybrid-rag/backend/config/: prompts.py  settings.py
advanced-hybrid-rag/backend/evaluation/: __init__.py  benchmark_runner.py  latency_profiler.py  ragas_evaluator.py  retrieval_metrics.py
advanced-hybrid-rag/backend/ingestion/: __init__.py  arxiv_monitor.py  chunker.py  csv_json_loader.py  embedder.py  metadata_extractor.py  models.py  multimodal_processor.py  pdf_processor.py  pipeline.py  privacy_processor.py  web_scraper.py
advanced-hybrid-rag/backend/reasoning/: __init__.py  answer_generator.py  chain_of_thought.py  citation_generator.py  decomposer.py  literature_review_generator.py  llm_router.py  query_analyzer.py  query_planning_agent.py  self_verifier.py  structured_output.py
advanced-hybrid-rag/backend/retrieval/: __init__.py  bm25_retriever.py  colbert_retriever.py  fusion.py  graph_retriever.py  hybrid_engine.py  hyde_retriever.py  reranker.py  vector_retriever.py
advanced-hybrid-rag/backend/storage/: __init__.py  annotation_store.py  bm25_store.py  cache_store.py  graph_store.py  relational_store.py  vector_store.py
advanced-hybrid-rag/data/: bm25_index.pkl
advanced-hybrid-rag/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
advanced-hybrid-rag/frontend/src/: App.tsx  main.tsx
advanced-hybrid-rag/streamlit_demo/: app.py  requirements.txt
advanced-hybrid-rag/tests/e2e/: test_full_query.py
advanced-hybrid-rag/tests/integration/: test_api.py  test_phase12_apis.py  test_pipeline.py
advanced-hybrid-rag/tests/unit/: test_adaptive_controller.py  test_chunker.py  (+6 more)
(+153 files in other folders)
