[project]
name = "advanced-hybrid-rag"
version = "0.1.0"
description = "Production-grade adaptive hybrid RAG system"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.111",
	"uvicorn[standard]>=0.29",
	"pydantic>=2.7",
	"pydantic-settings>=2.3",
	"openai>=1.30",
	"anthropic>=0.28",
	"groq>=0.9",
	"litellm>=1.40",
	"ollama>=0.2",
	"sentence-transformers>=3.0",
	"transformers>=4.41",
	"torch>=2.3",
	"chromadb>=0.5",
	"pgvector>=0.3",
	"rank-bm25>=0.2",
	"faiss-cpu>=1.8",
	"neo4j>=5.20",
	"networkx>=3.3",
	"pdfplumber>=0.11",
	"pypdf>=4.2",
	"pymupdf>=1.24",
	"python-docx>=1.1",
	"trafilatura>=1.9",
	"playwright>=1.44",
	"unstructured[pdf,docx]>=0.14",
	"redis>=5.0",
	"redisvl>=0.1",
	"sqlalchemy>=2.0",
	"alembic>=1.13",
	"aiosqlite>=0.20",
	"numpy>=1.26",
	"pandas>=2.2",
	"scipy>=1.13",
	"ragas>=0.1.9",
	"deepeval>=0.21",
	"langsmith>=0.1.77",
	"opentelemetry-sdk>=1.24",
	"arize-phoenix>=4.0",
	"python-jose[cryptography]>=3.3",
	"passlib[bcrypt]>=1.7",
	"slowapi>=0.1",
	"httpx>=0.27",
	"tenacity>=8.3",
	"python-multipart>=0.0.9",
	"pyyaml>=6.0",
	"rich>=13.7",
	"loguru>=0.7",
	"celery[redis]>=5.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
